# hexon

./: .coveragerc  .gitignore  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  sonar-project.properties  tests.py
.github/workflows/: build.yml  publish.yml  python-publish.yml
cli/: index.html
docs/: mkdocs.yml
docs/docs/: index.md  release-notes.md
docs/docs/cli/: index.md
license/: index.html
release-notes/: index.html
search/: search_index.json
src/hexon/: cli.py
src/hexon/structs/: __init__.py  coordinates.py  hexagon.py  hexedge.py  hexmap.py
